[package]
name = "actix-rust-template"
version = "0.1.0"
edition = "2021"
authors = ["ViniciosLugli <vinicioslugli@gmail.com>"]

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
